# cortex

./: .dockerignore  .gitignore  BETA.md  Dockerfile  Makefile  README.md  README_CN.md  config.docker.yaml  config.yaml  docker-compose.yml  get-cortex.sh  install.sh  pyproject.toml
.github/workflows/: ci.yml
console/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
console/src/: App.tsx  DetailDrawer.tsx  Toast.tsx  api.ts  fonts.d.ts  index.css  main.tsx
console/src/components/: TypeLabel.tsx
console/src/pages/: Digest.tsx  EventDetail.tsx  Events.tsx  Graph.tsx  Inbox.tsx  Ingest.tsx  Onboarding.tsx  Overview.tsx  Search.tsx  Settings.tsx  Signals.tsx  Theses.tsx
docs/: release-smoke.md
migrations/: 001_init.sql  002_add_unique_index.sql  003_embedding_512.sql  004_zhparser.sql  005_entity_search.sql  006_phase3.sql  007_relations_unique.sql  008_signals.sql  009_notifications.sql  010_theses.sql  011_event_relevance.sql
outputs/: Cortex-Product-Design-v1.md
src/cortex/api/: main.py  routes.py
src/cortex/cli/: main.py
src/cortex/domain/: canonical.py  constants.py  entities.py  ports.py  stance.py
src/cortex/use_cases/: analyze.py  contradiction.py  digest_push.py  ingest.py  (+9 more)
tests/: conftest.py  test_api.py  test_classifier.py  test_cli.py  test_constants.py  test_digest_push.py  test_entities.py  test_feedback_adjuster.py  test_notification_manager.py  test_optimizations.py  test_stance.py  test_storage_notifications.py  test_storage_signals.py  test_thesis_api.py  test_thesis_use_case.py  test_use_cases.py
(+5 files in other folders)
